Update HTML, CSS and JS files with mobile menu improvements

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <header id="header">
     <nav>
         <a href="../index.html" class="logo">HOME</a>
+        
 
         <!-- Desktop Navigation -->
         <ul class="nav-links">
@@ -66,6 +67,7 @@
 
 <!-- Mobile Navigation Menu (hidden by default) -->
 <div class="mobile-nav" id="mobileNav">
+    <a href="#" class="close-btn" id="closeMenuBtn">&times;</a>
     <a href="../projects_section/projects_main.html">Projects</a>
     <a href="../skills_section/skills_main.html">Skills</a>
     <a href="../blogs_section/blogs_main.html">Blogs</a>
