Update HTML, CSS and JS files with mobile menu improvements

--- a/skills_section/skills_main.html
+++ b/skills_section/skills_main.html
@@ -45,11 +45,13 @@
 
 <!-- Mobile Navigation Menu (hidden by default) -->
 <div class="mobile-nav" id="mobileNav">
-    <a href="../projects_section/projects_main.html">Projects</a>
-    <a href="../skills_section/skills_main.html">Skills</a>
-    <a href="../blogs_section/blogs_main.html">Blogs</a>
-    <a href="../coursework_section/coursework_main.html">Coursework</a>
-    <a href="../contact_section/contact_main.html">Contact</a>
+    <a href="/index.html" class="close-btn" id="closeMenuBtn">&times;</a>
+
+    <a href="/projects_section/projects_main.html">Projects</a>
+    <a href="/skills_section/skills_main.html">Skills</a>
+    <a href="/blogs_section/blogs_main.html">Blogs</a>
+    <a href="/coursework_section/coursework_main.html">Coursework</a>
+    <a href="/contact_section/contact_main.html">Contact</a>
 </div>
     <main class="page-container">
         <div class="page-hero"><h1 class="page-title"><i class="fas fa-brain glow-icon"></i> Skills & Expertise</h1>
