Update HTML, CSS and JS files with mobile menu improvements

--- a/skills_section/skills_main.html
+++ b/skills_section/skills_main.html
@@ -21,25 +21,15 @@
     <div class="physics-background"></div>
     <div class="physics-particles" id="particleSystem"></div>
     <div class="floating-equations" id="equationSystem"></div>
-   <header id="header">
+  <header id="header">
     <nav>
-        <a href="../index.html" class="logo">HOME</a>
-
-        <!-- Desktop Navigation -->
+        <a href="/index.html" class="logo">HOME</a>
         <ul class="nav-links">
-            <li><a href="../projects_section/projects_main.html">Projects</a></li>
-            <li><a href="../skills_section/skills_main.html">Skills</a></li>
-            <li><a href="../blogs_section/blogs_main.html">Blogs</a></li>
-            <li><a href="../coursework_section/coursework_main.html">Coursework</a></li>
-            <li><a href="../contact_section/contact_main.html">Contact</a></li>
-        </ul>
-
-        <!-- Hamburger Menu Icon (for mobile) -->
+            <li><a href="/projects_section/projects_main.html">Projects</a></li>
+            <li><a href="/skills_section/skills_main.html">Skills</a></li>
+            </ul>
         <div class="hamburger-menu" id="hamburgerMenu">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
+            </div>
     </nav>
 </header>
 
