Update HTML, CSS and JS files with mobile menu improvements

--- a/projects_section/projects_main.html
+++ b/projects_section/projects_main.html
@@ -23,25 +23,26 @@
     <div class="floating-equations" id="equationSystem"></div>
 <header id="header">
     <nav>
-        <a href="/index.html" class="logo">HOME</a>
+        <a href="../index.html" class="logo">HOME</a>
         <ul class="nav-links">
-            <li><a href="/projects_section/projects_main.html">Projects</a></li>
-            <li><a href="/skills_section/skills_main.html">Skills</a></li>
-            </ul>
+            <li><a href="../projects_section/projects_main.html">Projects</a></li>
+            <li><a href="../skills_section/skills_main.html">Skills</a></li>
+            <li><a href="../blogs_section/blogs_main.html">Blogs</a></li>
+            <li><a href="../coursework_section/coursework_main.html">Coursework</a></li>
+            <li><a href="../contact_section/contact_main.html">Contact</a></li>
+        </ul>
         <div class="hamburger-menu" id="hamburgerMenu">
-            </div>
+            <div class="bar"></div><div class="bar"></div><div class="bar"></div>
+        </div>
     </nav>
 </header>
-
-<!-- Mobile Navigation Menu (hidden by default) -->
 <div class="mobile-nav" id="mobileNav">
-    <a href="/index.html" class="close-btn" id="closeMenuBtn">&times;</a>
-
-    <a href="/projects_section/projects_main.html">Projects</a>
-    <a href="/skills_section/skills_main.html">Skills</a>
-    <a href="/blogs_section/blogs_main.html">Blogs</a>
-    <a href="/coursework_section/coursework_main.html">Coursework</a>
-    <a href="/contact_section/contact_main.html">Contact</a>
+    <a href="#" class="close-btn" id="closeMenuBtn">&times;</a>
+    <a href="../projects_section/projects_main.html">Projects</a>
+    <a href="../skills_section/skills_main.html">Skills</a>
+    <a href="../blogs_section/blogs_main.html">Blogs</a>
+    <a href="../coursework_section/coursework_main.html">Coursework</a>
+    <a href="../contact_section/contact_main.html">Contact</a>
 </div>
     <main class="page-container">
         <div class="page-hero">
